fixed the homepage projects UI so that the gray boxes overlap w/ the banner images

--- a/css/index.css
+++ b/css/index.css
@@ -301,7 +301,6 @@ body .top-content-flipped img {
 }
 body .home-middle-content {
   margin: 0 8.4rem;
-  positon: relative;
 }
 body .home-middle-content h2 {
   font-weight: bold;
@@ -309,16 +308,19 @@ body .home-middle-content h2 {
   color: #222222;
   padding: 3rem 0;
 }
-body .home-middle-content img {
+body .home-middle-content .project .banner {
+  position: relative;
+}
+body .home-middle-content .project .banner img {
   width: 100%;
+  padding-bottom: 2rem;
 }
-body .home-middle-content .img-description {
-  display: flex;
-  justify-content: flex-end;
-  positon: absolute;
-  top: 2rem;
+body .home-middle-content .project .banner .img-description {
+  position: absolute;
+  bottom: 0rem;
+  right: 0px;
 }
-body .home-middle-content .img-description h1 {
+body .home-middle-content .project .banner .img-description h1 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -329,7 +331,23 @@ body .home-middle-content .img-description h1 {
   color: #222222;
   border: 1px solid #FFFFFF;
 }
-body .home-middle-content p {
+body .home-middle-content .project .banner .img-description-alternate {
+  position: absolute;
+  bottom: 0rem;
+  left: 0px;
+}
+body .home-middle-content .project .banner .img-description-alternate h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #D8D8D8;
+  width: 28rem;
+  height: 6rem;
+  font-size: 1.8rem;
+  color: #222222;
+  border: 1px solid #FFFFFF;
+}
+body .home-middle-content .project p {
   width: 50%;
   margin: 0 auto;
   padding: 1rem 0;
