--- a/less/home.less
+++ b/less/home.less
@@ -150,37 +150,59 @@ body{
 
 .home-middle-content {
   margin: 0 8.4rem;
-  positon: relative;
   h2{
     .sub-header;
     padding: 3rem 0;
   }
-  img{
-    width: 100%;
-  }
-  .img-description{
-    display: flex;
-    justify-content: flex-end;
-    positon: absolute;
-    top: 2rem;
-    h1{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: @gray;
-      width: 28rem;
-      height: 6rem;
-      font-size: 1.8rem;
-      color: @off-black;
-      border: 1px solid @white;
+  .project{
+    .banner{
+      position: relative;
+      img{
+        width: 100%;
+        padding-bottom: 2rem;
+      }
+      .img-description{
+        position: absolute;
+        bottom: 0rem;
+        right: 0px;
+        h1{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: @gray;
+          width: 28rem;
+          height: 6rem;
+          font-size: 1.8rem;
+          color: @off-black;
+          border: 1px solid @white;
+        }
+      }
+      .img-description-alternate{
+        position: absolute;
+        bottom: 0rem;
+        left: 0px;
+        h1{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: @gray;
+          width: 28rem;
+          height: 6rem;
+          font-size: 1.8rem;
+          color: @off-black;
+          border: 1px solid @white;
+        }
+      }
     }
-  }
-  p{
-    width: 50%;
-    margin: 0 auto;
-    padding: 1rem 0;
-  }
-}
+
+    p{
+      width: 50%;
+      margin: 0 auto;
+      padding: 1rem 0;
+    }
+  } //.project
+
+}//.home-middle-content
 
 
 }
